Adding Gradient Descent Examples

--- a/GradientDescenteMethods/DG3_droite.ipynb
+++ b/GradientDescenteMethods/DG3_droite.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "69a486a0",
    "metadata": {
     "scrolled": true
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: <object object at 0x7fee3433d8e0>\n"
+      "Using matplotlib backend: Qt5Agg\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5a361e1c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e0bbe71f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2322751f",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "e9f6fe54",
    "metadata": {},
    "outputs": [
@@ -144,8 +144,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 2.1674 et b = 0.3690 ]\n",
-      "La somme des carrés des erreurs de modélisation est : 0.1368\n"
+      "Les paramètres de la droite sont a = 2.0551 et b = 0.4402 ]\n",
+      "La somme des carrés des erreurs de modélisation est : 0.4884\n"
      ]
     }
    ],
@@ -158,8 +158,16 @@
    "id": "7c00b6a8",
    "metadata": {},
    "source": [
-    "On considère ensuite un second enregistrement de **101 couples** $\\boldsymbol{\\{\\,x_{[i]}\\,,\\,y_{[i]}\\,\\}}$ avec toujours $\\boldsymbol{x\\in[\\,0\\,,\\,1\\,]}$\n",
-    "\n",
+    "On considère ensuite un second enregistrement de **101 couples** $\\boldsymbol{\\{\\,x_{[i]}\\,,\\,y_{[i]}\\,\\}}$ avec toujours $\\boldsymbol{x\\in[\\,0\\,,\\,1\\,]}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1cbbb87b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x = np.linspace(0,1,101)\n",
     "y = theta1*x + theta2 + bruit*np.random.randn(len(x))\n",
     "\n",
@@ -170,8 +178,25 @@
     "plt.ylabel('variable y', fontsize=18)\n",
     "plt.legend(fontsize=18)\n",
     "plt.grid()\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e2d9810d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les paramètres de la droite sont a = 1.9017 et b = 0.5518 ]\n",
+      "La somme des carrés des erreurs de modélisation est : 3.8069\n"
+     ]
+    }
+   ],
+   "source": [
     "DGd(x,y,np.array([ 0 , 0 ]),0.005,100)"
    ]
   },
