Final Refactoring of descent gradient examples

--- a/GradientDescenteMethods/DG2_fonction2D.ipynb
+++ b/GradientDescenteMethods/DG2_fonction2D.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4dafc106",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "%matplotlib inline\n"
+    "get_ipython().run_line_magic('matplotlib', 'inline')"
    ]
   },
   {
@@ -129,24 +129,6 @@
     "    gradient_Theta = np.array([(1-2*Theta[0]**2)*np.exp(-Theta[0]**2-Theta[1]**2)+Theta[0]/10 ,\n",
     "                              -2*Theta[0]*Theta[1]*np.exp(-Theta[0]**2-Theta[1]**2)+Theta[1]/10])\n",
     "    return gradient_Theta\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "da360af1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: <object object at 0x7f8f6a8b08c0>\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib\n"
    ]
   },
   {
@@ -321,21 +303,11 @@
     "    plt.scatter(0, Theta[1,0], c = 'c', label = 'Theta2')\n",
     "    plt.legend()\n",
     "    \n",
-    "    if duree != 0:\n",
-    "        for j in range(i+2):\n",
-    "            plt.figure(1)\n",
-    "            ax.scatter(Theta[0,j],Theta[1,j],cout(Theta[:,j]),c='r',s=40)\n",
-    "            plt.pause(duree)\n",
-    "            plt.figure(2)\n",
-    "            plt.scatter(j,Theta[0,j], c = 'b')\n",
-    "            plt.scatter(j,Theta[1,j], c = 'c')\n",
-    "            plt.pause(duree)\n",
-    "    else:\n",
-    "        plt.figure(1)\n",
-    "        ax.scatter(Theta[0,:],Theta[1,:],cout(Theta),c='r',s=40)\n",
-    "        plt.figure(2)\n",
-    "        plt.scatter(np.linspace(0,i+1,i+2), Theta[0,:], c = 'b')\n",
-    "        plt.scatter(np.linspace(0,i+1,i+2), Theta[1,:], c = 'c')\n",
+    "    plt.figure(1)\n",
+    "    ax.scatter(Theta[0,:],Theta[1,:],cout(Theta),c='r',s=40)\n",
+    "    plt.figure(2)\n",
+    "    plt.scatter(np.linspace(0,i+1,i+2), Theta[0,:], c = 'b')\n",
+    "    plt.scatter(np.linspace(0,i+1,i+2), Theta[1,:], c = 'c')\n",
     "    \n",
     "    plt.show()"
    ]
