--- a/GradientDescenteMethods/DG3_droite.ipynb
+++ b/GradientDescenteMethods/DG3_droite.ipynb
@@ -31,29 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "69a486a0",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: Qt5Agg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib"
+    "get_ipython().run_line_magic('matplotlib', 'inline')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "5a361e1c",
    "metadata": {},
    "outputs": [],
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e0bbe71f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "2322751f",
    "metadata": {},
    "outputs": [],
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "e9f6fe54",
    "metadata": {},
    "outputs": [
@@ -144,8 +136,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 2.0551 et b = 0.4402 ]\n",
-      "La somme des carrés des erreurs de modélisation est : 0.4884\n"
+      "Les paramètres de la droite sont a = 1.3623 et b = 0.7749 ]\n",
+      "La somme des carrés des erreurs de modélisation est : 0.1501\n"
      ]
     }
    ],
@@ -163,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1cbbb87b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "e2d9810d",
    "metadata": {},
    "outputs": [
@@ -191,8 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 1.9017 et b = 0.5518 ]\n",
-      "La somme des carrés des erreurs de modélisation est : 3.8069\n"
+      "Les paramètres de la droite sont a = 2.0480 et b = 0.4668 ]\n",
+      "La somme des carrés des erreurs de modélisation est : 4.1854\n"
      ]
     }
    ],
@@ -217,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "fd51746e",
    "metadata": {},
    "outputs": [],
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "262b808b",
    "metadata": {},
    "outputs": [
@@ -269,8 +261,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 1.9017 et b = 0.5518 ]\n",
-      "Erreur de modélisation moyenne au carré : 0.0377\n"
+      "Les paramètres de la droite sont a = 2.0480 et b = 0.4669 ]\n",
+      "Erreur de modélisation moyenne au carré : 0.0414\n"
      ]
     }
    ],
@@ -288,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "fa96578c",
    "metadata": {},
    "outputs": [],
@@ -308,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "d2670afa",
    "metadata": {},
    "outputs": [
@@ -316,8 +308,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 2.0157 et b = 0.4969 ]\n",
-      "Erreur de modélisation moyenne au carré : 0.0432\n"
+      "Les paramètres de la droite sont a = 1.9489 et b = 0.5248 ]\n",
+      "Erreur de modélisation moyenne au carré : 0.0399\n"
      ]
     }
    ],
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "1d15a04b",
    "metadata": {},
    "outputs": [],
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "63a217f1",
    "metadata": {},
    "outputs": [
@@ -363,8 +355,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 2.0237 et b = 0.3438 ]\n",
-      "Erreur de modélisation moyenne au carré : 0.0461\n"
+      "Les paramètres de la droite sont a = 2.0234 et b = 0.3526 ]\n",
+      "Erreur de modélisation moyenne au carré : 0.0472\n"
      ]
     }
    ],
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "07f1f6f4",
    "metadata": {},
    "outputs": [],
@@ -438,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "ea4caebd",
    "metadata": {},
    "outputs": [
@@ -446,8 +438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les paramètres de la droite sont a = 2.0017 et b = 0.4872\n",
-      "Erreur de modélisation moyenne au carré : 0.0416\n"
+      "Les paramètres de la droite sont a = 1.9968 et b = 0.5269\n",
+      "Erreur de modélisation moyenne au carré : 0.0404\n"
      ]
     }
    ],
@@ -465,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "69ec8151",
    "metadata": {},
    "outputs": [],
@@ -542,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "8387c504",
    "metadata": {},
    "outputs": [
@@ -554,8 +546,8 @@
       "donc le nombre de batch pour couvrir le jeu de données est : 1\n",
       "Le nombre de passe pour au moins atteindre le nombre d'itérations max est : 101\n",
       "ce qui conduit au total à 101 itérations où l'on manipule des matrices de dimension :  1001 x 2\n",
-      "Les paramètres de la droite sont a = 2.0018 et b = 0.4866\n",
-      "Erreur de modélisation moyenne au carré : 0.0416\n"
+      "Les paramètres de la droite sont a = 1.9969 et b = 0.5263\n",
+      "Erreur de modélisation moyenne au carré : 0.0404\n"
      ]
     }
    ],
@@ -573,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "74447343",
    "metadata": {},
    "outputs": [
@@ -585,8 +577,8 @@
       "donc le nombre de batch pour couvrir le jeu de données est : 10\n",
       "Le nombre de passe pour au moins atteindre le nombre d'itérations max est : 11\n",
       "ce qui conduit au total à 110 itérations où l'on manipule des matrices de dimension :  100 x 2\n",
-      "Les paramètres de la droite sont a = 2.0009 et b = 0.4601\n",
-      "Erreur de modélisation moyenne au carré : 0.0425\n"
+      "Les paramètres de la droite sont a = 1.9978 et b = 0.5163\n",
+      "Erreur de modélisation moyenne au carré : 0.0404\n"
      ]
     }
    ],
@@ -596,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "93547a93",
    "metadata": {},
    "outputs": [
@@ -608,8 +600,8 @@
       "donc le nombre de batch pour couvrir le jeu de données est : 100\n",
       "Le nombre de passe pour au moins atteindre le nombre d'itérations max est : 2\n",
       "ce qui conduit au total à 200 itérations où l'on manipule des matrices de dimension :  10 x 2\n",
-      "Les paramètres de la droite sont a = 1.9993 et b = 0.5673\n",
-      "Erreur de modélisation moyenne au carré : 0.0464\n"
+      "Les paramètres de la droite sont a = 2.0001 et b = 0.5976\n",
+      "Erreur de modélisation moyenne au carré : 0.0481\n"
      ]
     }
    ],
@@ -619,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "5d0e13b3",
    "metadata": {},
    "outputs": [
@@ -631,8 +623,8 @@
       "donc le nombre de batch pour couvrir le jeu de données est : 250\n",
       "Le nombre de passe pour au moins atteindre le nombre d'itérations max est : 1\n",
       "ce qui conduit au total à 250 itérations où l'on manipule des matrices de dimension :  4 x 2\n",
-      "Les paramètres de la droite sont a = 2.0155 et b = 0.4999\n",
-      "Erreur de modélisation moyenne au carré : 0.0495\n"
+      "Les paramètres de la droite sont a = 1.9868 et b = 0.4144\n",
+      "Erreur de modélisation moyenne au carré : 0.0676\n"
      ]
     }
    ],
@@ -642,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "94af78ea",
    "metadata": {},
    "outputs": [
@@ -654,8 +646,8 @@
       "donc le nombre de batch pour couvrir le jeu de données est : 1001\n",
       "Le nombre de passe pour au moins atteindre le nombre d'itérations max est : 1\n",
       "ce qui conduit au total à 1001 itérations où l'on manipule des matrices de dimension :  1 x 2\n",
-      "Les paramètres de la droite sont a = 1.9547 et b = 0.5388\n",
-      "Erreur de modélisation moyenne au carré : 0.0949\n"
+      "Les paramètres de la droite sont a = 2.0185 et b = 0.4268\n",
+      "Erreur de modélisation moyenne au carré : 0.0438\n"
      ]
     }
    ],
